tests/snapshots/config_fixtures__port_too_large.snap
---
source: tests/config_fixtures.rs
expression: err.to_string()
---
TOML parse error at line 2, column 8
  |
2 | port = 70000
  |        ^^^^^
invalid value: integer `70000`, expected u16
